cluster/integration-operators.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: openshift-serverless
    openshift.io/cluster-monitoring: "true"
  name: openshift-serverless
spec:
  finalizers:
  - kubernetes
