cluster/eck.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    kubernetes.io/metadata.name: elastic
    openshift.io/cluster-monitoring: "true"
  annotations:
    openshift.io/description: APS OCP Demo of Elastic Cloud on Kubernetes
    openshift.io/display-name: Demo ELK
spec:
  finalizers:
    - kubernetes
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: elasticsearch-es-http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: elastic
spec:
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: kibana-kb-http
---
